<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/activity_user_index"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="weibo.wangtao.weibo.Activity.UserIndex">
    <RelativeLayout
        android:id="@+id/user_index_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/primary_blue"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/user_index_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/user_index_back_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%w"
        app:layout_heightPercent="30%h"
        android:layout_below="@id/user_index_toolbar"
        >

        <ImageView
            android:id="@+id/user_index_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="100%w"
            app:layout_heightPercent="100%h"
            android:scaleType="fitCenter"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
        <!--<TextView-->
            <!--android:id="@+id/user_index_screen_name"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="0dp"-->
            <!--app:layout_widthPercent="50%h"-->
            <!--app:layout_heightPercent="15%h"-->
            <!--app:layout_marginTopPercent="5%h"-->
            <!--android:text="昵称"-->
            <!--app:layout_textSizePercent="5%w"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_below="@id/user_index_userphoto"-->
            <!--android:gravity="center"-->
            <!--android:textColor="@color/slidingmenu_left_menu_screen_neme"-->

            <!--/>-->


        <ImageView
            android:id="@+id/user_index_userphoto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="30%h"
            app:layout_heightPercent="30%h"
            android:scaleType="fitCenter"
            app:layout_marginTopPercent="20%h"

            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/user_index_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="50%h"
            app:layout_heightPercent="15%h"
            app:layout_marginTopPercent="5%h"
            android:text="签名"
            app:layout_textSizePercent="3%w"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/user_index_userphoto"
            android:gravity="center"
            android:textColor="@color/slidingmenu_left_menu_description"

            />
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
       <android.support.v7.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           card_view:cardCornerRadius="5dp"
           card_view:cardElevation="2dp"
           card_view:cardUseCompatPadding="true"
           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_weight="1"
                       android:padding="15dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:gravity="start"
                       android:text="@string/user_index_screen_name"/>
                   <TextView
                       android:id="@+id/user_index_screen_name"
                       android:layout_weight="6"
                       android:padding="14dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:gravity="start"
                       />

               </LinearLayout>
               <View
                   android:layout_width="match_parent"
                   android:layout_height="0.5px"

                   android:background="@color/slidingmenu_left_menu_blank"
                   />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_weight="1"
                       android:padding="15dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:gravity="start"
                       android:text="@string/user_index_city"/>
                   <TextView
                       android:id="@+id/user_index_city"
                       android:layout_weight="6"
                       android:padding="14dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:gravity="start"
                       />

               </LinearLayout>
               <View
                   android:layout_width="match_parent"
                   android:layout_height="0.5px"

                   android:background="@color/slidingmenu_left_menu_blank"
                   />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_weight="1"
                       android:padding="15dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:gravity="start"
                       android:text="@string/user_index_followers_count"/>
                   <TextView
                       android:layout_weight="6"
                       android:id="@+id/user_index_fans"
                       android:padding="14dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:gravity="start"
                       />

               </LinearLayout>
               <View
                   android:layout_width="match_parent"
                   android:layout_height="0.5px"

                   android:background="@color/slidingmenu_left_menu_blank"
                   />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_weight="1"
                       android:padding="15dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:gravity="start"
                       android:text="@string/user_index_sex"
                       android:id="@+id/textView" />

                   <TextView

                       android:id="@+id/user_index_sex"
                       android:layout_weight="6"
                       android:padding="14dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:gravity="start"
                       />

               </LinearLayout>

           </LinearLayout>

       </android.support.v7.widget.CardView>

    </LinearLayout>
</com.zhy.android.percent.support.PercentLinearLayout>
